# Roombot

./: README.md  run.sh  sample.txt
data/: 1549710464140631.pcd
devel/: .catkin  .rosinstall  setup.sh
devel/include/realsense2_camera/: Extrinsics.h  IMUInfo.h
devel/lib/ddynamic_reconfigure/: dd_server
devel/lib/pkgconfig/: ddynamic_reconfigure.pc  realsense2_camera.pc  roomba_rover.pc  roomba_test.pc  roombot_driver.pc  roombot_gazebo.pc
devel/lib/roomba_rover/: image_publisher
devel/lib/roombot_driver/: roombot_joy_to_twist  roombot_rviz_sim  roombot_twist_to_tf  twist_marker_visualizer  vis_robot_sim
roombot_driver/: CMakeLists.txt  package.xml
roombot_driver/src/: image_processor.cpp
src/: run.sh
src/control/roomba_rover/: CMakeLists.txt  package.xml
src/control/roombot_driver/: CMakeLists.txt  package.xml
src/control/roombot_driver/src/: roombot_joy_to_twist.cpp  twist_marker_visualizer.cpp
src/roomba_test/: CMakeLists.txt  package.xml
src/roombot_driver/: CMakeLists.txt
src/roombot_driver/launch/: joy_remote_controller.launch  move_robot.launch
src/roombot_driver/src/: roombot_joy_to_twist.cpp  roombot_rviz_sim.cpp
src/system/roombot_gazebo/: CMakeLists.txt  package.xml
src/system/roombot_gazebo/config/: diff_drive_controller.yaml
src/system/roombot_gazebo/launch/: move_roombot.launch
src/system/roombot_gazebo/rviz/: move_roombot_default.rviz
src/system/roombot_gazebo/stl/: Roomba_model_exact.stl
src/system/roombot_gazebo/worlds/: test_field_01.world
src/system/roombot_gazebo/xacro/: roomba_stl_body.xacro
(+16 files in other folders)
